Sculpt Mode: Correct color filter saturation #97697

Closed
opened 2022-04-29 11:30:48 +02:00 by Julien Kaspar · 8 comments
Member

(NOTE) This task is part of the community & sub tasks of the workboard. Anyone is free to pick up this task and contribute. For any questions or needed reviewers, please tag @JosephEagar and @JulienKaspar or use blender.chat.

This task is meant for fixing the core issue behind #97097.

Issue

When using the color filter tool in sculpt mode to saturate the active color attribute, it saturates all colors equally.
The fix to #97097 at least helps to leave greyscale colors untouched, but it still creates hard transitions between saturated and greyscale colors.

saturate1.png

Proposal

For the saturation filter type to work as expected, it needs to take the initial saturation of each color as a strength multiplier. This way the filter affects already saturated colors more strongly than less saturated colors.
This is how other painting applications seem to handle saturation.

saturate2.png

What the best solution would be for the user and on the implementation side still should be discussed.

(NOTE) This task is part of the community & sub tasks of the workboard. Anyone is free to pick up this task and contribute. For any questions or needed reviewers, please tag @JosephEagar and @JulienKaspar or use [blender.chat](https://blender.chat/channel/sculpt-paint-texture-module). This task is meant for fixing the core issue behind #97097. ## Issue When using the color filter tool in sculpt mode to saturate the active color attribute, it saturates all colors equally. The fix to #97097 at least helps to leave greyscale colors untouched, but it still creates hard transitions between saturated and greyscale colors. ![saturate1.png](https://archive.blender.org/developer/F13037302/saturate1.png) ## Proposal For the saturation filter type to work as expected, it needs to take the initial saturation of each color as a strength multiplier. This way the filter affects already saturated colors more strongly than less saturated colors. This is how other painting applications seem to handle saturation. ![saturate2.png](https://archive.blender.org/developer/F13037304/saturate2.png) What the best solution would be for the user and on the implementation side still should be discussed.
Author
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Author
Member

Added subscribers: @JulienKaspar, @JosephEagar

Added subscribers: @JulienKaspar, @JosephEagar
Author
Member

One thing that makes me question if this is even the desired behaviour is that Krita updated their saturation behaviour ever since Krita 4.4.
They still provide a "Legacy mode" that behaves like in the picture above. But the new behaviour works differently.
We need to discuss and investigate this further.

One thing that makes me question if this is even the desired behaviour is that Krita updated their saturation behaviour ever since Krita 4.4. They still provide a "Legacy mode" that behaves like in the picture above. But the new behaviour works differently. We need to discuss and investigate this further.
Ramil Roosileht self-assigned this 2022-04-29 19:40:42 +02:00

Does seem to work better like this, but let's see what Krita does just to be sure
97Y651oHEo.mp4

Does seem to work better like this, but let's see what Krita does just to be sure [97Y651oHEo.mp4](https://archive.blender.org/developer/F13038609/97Y651oHEo.mp4)
Author
Member

@Limarest That was fast! That way it looks more correct. But yes it would be wise to see why Krita went for a different behaviour. Probably to preserve the distinction between the individual colors.
Even with this updated behaviour for the color filter tool, the colors immediately bleed together and get lost.

@Limarest That was fast! That way it looks more correct. But yes it would be wise to see why Krita went for a different behaviour. Probably to preserve the distinction between the individual colors. Even with this updated behaviour for the color filter tool, the colors immediately bleed together and get lost.

This issue was referenced by 2fc6563a59

This issue was referenced by 2fc6563a597ad8877fea5e580c87eb4e13e58961
Author
Member

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Author
Member

Closing this now, as the main issues have been fixed.

Closing this now, as the main issues have been fixed.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97697
No description provided.