source/blender/editors/sculpt_paint/sculpt_filter_color.c
@@ -132,7 +132,7 @@ static void color_filter_task_cb(void *__restrict userdata,
         rgb_to_hsv_v(orig_color, hsv_color);
 
         if (hsv_color[1] > 0.001f) {
-          hsv_color[1] = clamp_f(hsv_color[1] + fade, 0.0f, 1.0f);
+          hsv_color[1] = clamp_f(hsv_color[1] + fade * hsv_color[1], 0.0f, 1.0f);
           hsv_to_rgb_v(hsv_color, final_color);
         }
         else {
